syntax = "proto3";

option java_package = "com.soulfiremc.grpc.generated";
option java_multiple_files = true;

package soulfire.v1;

import "soulfire/common.proto";

message ProxyCheckRequest {
  string instance_id = 1;
  repeated ProxyProto proxy = 2;
}

message ProxyCheckResponseSingle {
  ProxyProto proxy = 1;
  bool valid = 2;
  int32 latency = 3;
  string real_ip = 4;
}

// Marks the end of a proxy check stream
message ProxyCheckEnd {
}

message ProxyCheckResponse {
  oneof data {
    ProxyCheckResponseSingle single = 4;
    ProxyCheckEnd end = 5;
  }
}

service ProxyCheckService {
  rpc Check (ProxyCheckRequest) returns (stream ProxyCheckResponse) {}
}
